# server-reason-react-example

./: .gitignore  Makefile  README.md  dune  dune-project  flake.nix  node-packages.nix  node.nix  package-lock.json  package.json  server-reason-react-example.opam  tailwind.config.cjs  vite.config.js
nix/: default.nix  overlay.nix  ppx_deriving-melange.patch
react_compat/: dune  reactCompat.ml
react_plugin/: dune  react_plugin.mli
scripts/: start-server.sh
server/: dune  http.ml  main.ml  react_app.re  result_syntax.ml  router.ml  server.ml
ui/: react-refresh.js
ui/js/: dune  main.re
ui/js/shared/: App.re
ui/native/: dune  plugin.ml
ui/native/react_plugin_dynamic/: dune  react_plugin.ml
ui/native/react_plugin_static/: dune  react_plugin.ml
